# AndroidSystem

./: README.md
HardWareProject/: build.gradle  gradle.properties
HardWareProject/app/: CMakeLists.txt  build.gradle
HardWareProject/app/src/androidTest/java/com/mufeng/hardware/: ExampleInstrumentedTest.java
HardWareProject/app/src/androidTest/java/com/mufeng/myapplication1/: ExampleInstrumentedTest.java
HardWareProject/app/src/main/: AndroidManifest.xml
HardWareProject/app/src/main/cpp/: native-lib.cpp
HardWareProject/app/src/main/cpp/libhardware/: CMakeLists.txt  hardware.c  linker.c  properties.cpp
HardWareProject/app/src/main/java/com/mufeng/hardware/: JNILib.java  MainActivity.kt  ScrollingActivity.java
HardWareProject/app/src/main/java/com/mufeng/myapplication1/: JNILib.java  MainActivity.kt  ScrollingActivity.java
HardWareProject/app/src/main/res/layout/: activity_main.xml  activity_scrolling.xml  content_scrolling.xml
HardWareProject/app/src/main/res/menu/: menu_scrolling.xml
HardWareProject/app/src/main/res/values/: strings.xml
HardWareProject/app/src/test/java/com/mufeng/hardware/: ExampleUnitTest.java
HardWareProject/app/src/test/java/com/mufeng/myapplication1/: ExampleUnitTest.java
